--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -93,6 +93,11 @@ jobs:
           VITE_API_BASE_URL: http://localhost:8000
         run: npm run build
       
+      - name: Check build output
+        run: |
+          echo "📁 Checking dist folder..."
+          ls -la dist/ || echo "ERROR: dist folder not found"
+      
       - name: Check build size
         run: |
           echo "📦 Build size:"
