--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -36,6 +36,9 @@ jobs:
           VITE_API_BASE_URL: ${{ secrets.VITE_API_BASE_URL }}
         run: npm run build
       
+      - name: Check build output
+        run: ls -la dist/ || echo "ERROR: dist folder not found"
+      
       - name: Deploy to Vercel
         uses: amondnet/vercel-action@v25
         with:
