--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -46,12 +46,12 @@ jobs:
           vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
           vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }}
           working-directory: frontend
-          vercel-args: '--prod'
+          vercel-args: "--prod"
       
       - name: Notify Success
         if: success()
-        run: echo "✅ Frontend deployed successfully to Vercel!"
+        run: echo "Frontend deployed successfully to Vercel!"
       
       - name: Notify Failure
         if: failure()
-        run: echo "❌ Frontend deployment failed!"
+        run: echo "Frontend deployment failed!"
