--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -95,10 +95,10 @@ jobs:
       
       - name: Check build output
         run: |
-          echo "📁 Checking dist folder..."
+          echo "Checking dist folder..."
           ls -la dist/ || echo "ERROR: dist folder not found"
       
       - name: Check build size
         run: |
-          echo "📦 Build size:"
+          echo "Build size:"
           du -sh dist/
