--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -63,4 +63,4 @@ jobs:
       
       - name: Notify Failure
         if: failure()
-        run: echo "Backend deployment failed!"
+        run: echo "Backend deployment failed!!"
