--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -52,7 +52,7 @@ jobs:
           aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           application_name: holisticmatch
           environment_name: holisticmatch-env
-          region: sa-east-1
+          region: us-east-2
           version_label: ${{ github.sha }}
           deployment_package: backend.zip
           wait_for_environment_recovery: 120
