--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -55,7 +55,27 @@ jobs:
           region: us-east-2
           version_label: ${{ github.sha }}
           deployment_package: backend.zip
+          existing_bucket_name: elasticbeanstalk-us-east-2-016804998023
           wait_for_environment_recovery: 120
+      
+      - name: Configure EB Environment Variables
+        run: |
+          pip install awsebcli
+          eb init -p python-3.11 holisticmatch --region us-east-2 --skip-ssl-validation
+          eb setenv \
+            DJANGO_SECRET_KEY="${{ secrets.DJANGO_SECRET_KEY }}" \
+            DJANGO_DEBUG="False" \
+            DJANGO_ALLOWED_HOSTS=".elasticbeanstalk.com,.vercel.app" \
+            DATABASE_URL="${{ secrets.DATABASE_URL }}" \
+            AWS_ACCESS_KEY_ID="${{ secrets.AWS_ACCESS_KEY_ID }}" \
+            AWS_SECRET_ACCESS_KEY="${{ secrets.AWS_SECRET_ACCESS_KEY }}" \
+            AWS_STORAGE_BUCKET_NAME="holisticmatch-media" \
+            AWS_S3_REGION_NAME="us-east-2" \
+            USE_S3="True" \
+            CORS_ALLOWED_ORIGINS="https://holisticmatch.vercel.app"
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       
       - name: Notify Success
         if: success()
