--- a/backend/.ebextensions/django.config
+++ b/backend/.ebextensions/django.config
@@ -1,9 +1,16 @@
-# Elastic Beanstalk configuration
+# Elastic Beanstalk configuration for Django
 option_settings:
   aws:elasticbeanstalk:container:python:
-    WSGIPath: config.wsgi:application
+    WSGIPath: backend/config/wsgi.py
   aws:elasticbeanstalk:application:environment:
     DJANGO_SETTINGS_MODULE: config.settings
-    PYTHONPATH: "/var/app/current:$PYTHONPATH"
+    PYTHONPATH: "/var/app/current/backend:$PYTHONPATH"
   aws:elasticbeanstalk:environment:proxy:staticfiles:
-    /static: staticfiles
+    /static: backend/staticfiles
+
+commands:
+  01_migrate:
+    command: "cd /var/app/current/backend && source /var/app/venv/*/bin/activate && python manage.py migrate"
+    leader_only: true
+  02_collectstatic:
+    command: "cd /var/app/current/backend && source /var/app/venv/*/bin/activate && python manage.py collectstatic --noinput"
