--- a/backend/Procfile
+++ b/backend/Procfile
@@ -1,1 +1,1 @@
-web: gunicorn config.wsgi --log-file -
+web: cd /var/app/current/backend && gunicorn config.wsgi:application --bind 0.0.0.0:8000 --log-file -
