--- a/backend/.ebextensions/django.config
+++ b/backend/.ebextensions/django.config
@@ -1,16 +1,16 @@
 # Elastic Beanstalk configuration for Django
 option_settings:
   aws:elasticbeanstalk:container:python:
-    WSGIPath: backend/config/wsgi.py
+    WSGIPath: config.wsgi:application
   aws:elasticbeanstalk:application:environment:
     DJANGO_SETTINGS_MODULE: config.settings
-    PYTHONPATH: "/var/app/current/backend:$PYTHONPATH"
+    PYTHONPATH: "/var/app/current:$PYTHONPATH"
   aws:elasticbeanstalk:environment:proxy:staticfiles:
-    /static: backend/staticfiles
+    /static: staticfiles
 
 commands:
   01_migrate:
-    command: "cd /var/app/current/backend && source /var/app/venv/*/bin/activate && python manage.py migrate"
+    command: "cd /var/app/current && source /var/app/venv/*/bin/activate && python manage.py migrate"
     leader_only: true
   02_collectstatic:
-    command: "cd /var/app/current/backend && source /var/app/venv/*/bin/activate && python manage.py collectstatic --noinput"
+    command: "cd /var/app/current && source /var/app/venv/*/bin/activate && python manage.py collectstatic --noinput"
