--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -13,10 +13,6 @@ jobs:
     name: Deploy to Vercel
     runs-on: ubuntu-latest
     
-    defaults:
-      run:
-        working-directory: frontend
-    
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -29,19 +25,22 @@ jobs:
           cache-dependency-path: frontend/package-lock.json
       
       - name: Install dependencies
+        working-directory: frontend
         run: npm ci
       
       - name: Build
+        working-directory: frontend
         env:
           VITE_API_BASE_URL: ${{ secrets.VITE_API_BASE_URL }}
         run: npm run build
       
       - name: Check build output
+        working-directory: frontend
         run: |
           ls -la dist/ || echo "dist folder not found"
       
       - name: Deploy to Vercel
-        run: npx vercel deploy --prod --token=${{ secrets.VERCEL_TOKEN }}
+        run: npx vercel deploy --prod --cwd=frontend --token=${{ secrets.VERCEL_TOKEN }}
         env:
           VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
           VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
