--- a/backend/.ebextensions/django.config
+++ b/backend/.ebextensions/django.config
@@ -9,8 +9,6 @@ option_settings:
     /static: staticfiles
 
 commands:
-  01_migrate:
-    command: "cd /var/app/current && source /var/app/venv/*/bin/activate && python manage.py migrate"
-    leader_only: true
   02_collectstatic:
     command: "cd /var/app/current && source /var/app/venv/*/bin/activate && python manage.py collectstatic --noinput"
+    ignoreErrors: true
