--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -40,7 +40,8 @@ jobs:
           ls -la dist/ || echo "dist folder not found"
       
       - name: Deploy to Vercel
-        run: npx vercel deploy --prod --cwd=frontend --token=${{ secrets.VERCEL_TOKEN }}
+        working-directory: frontend
+        run: npx vercel deploy --prod --token=${{ secrets.VERCEL_TOKEN }}
         env:
           VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
           VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
