--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,6 @@
   "outputDirectory": "frontend/dist",
   "installCommand": "cd frontend && npm ci",
   "env": {
-    "VITE_API_BASE_URL": "http://holisticmatch-env.eba-cthmhjpa.us-east-2.elasticbeanstalk.com/api/v1"
+    "VITE_API_BASE_URL": "https://holisticmatch-env.eba-cthmhjpa.us-east-2.elasticbeanstalk.com/api/v1"
   }
 }
