--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,10 @@
   "buildCommand": "cd frontend && npm run build",
   "outputDirectory": "frontend/dist",
   "installCommand": "cd frontend && npm ci",
-  "env": {
-    "VITE_API_BASE_URL": "https://holisticmatch-env.eba-cthmhjpa.us-east-2.elasticbeanstalk.com/api/v1"
-  }
+  "rewrites": [
+    {
+      "source": "/api/:path*",
+      "destination": "https://holisticmatch-env.eba-cthmhjpa.us-east-2.elasticbeanstalk.com/api/v1/:path*"
+    }
+  ]
 }
