--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -35,8 +35,12 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
-    }
+    },
+    
+    /* Vitest types */
+    "types": ["vitest/globals"]
   },
   "include": ["src"],
+  "exclude": ["**/*.test.ts", "**/*.test.tsx", "node_modules", "dist"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
