--- a/backend/pytest.ini
+++ b/backend/pytest.ini
@@ -2,11 +2,14 @@
 DJANGO_SETTINGS_MODULE = config.settings
 python_files = tests.py test_*.py *_tests.py
 testpaths = tests
+# OPTIMIZED: Performance improvements
 addopts = 
     --verbose
     --strict-markers
     --tb=short
+    --durations=5
 markers =
     contract: Contract tests verifying API specifications
     integration: Integration tests for end-to-end flows
     unit: Unit tests for individual components
+
