--- a/backend/.ebextensions/nginx_upload.config
+++ b/backend/.ebextensions/nginx_upload.config
@@ -4,9 +4,19 @@ files:
     owner: root
     group: root
     content: |
-      client_max_body_size 50M;
+      # Allow uploads up to 250MB
+      client_max_body_size 250M;
+      
+      # Also set timeout for large uploads
+      client_body_timeout 300s;
+      proxy_connect_timeout 300s;
+      proxy_send_timeout 300s;
+      proxy_read_timeout 300s;
 
 commands:
   01_create_nginx_config:
-    command: "mkdir -p /etc/nginx/conf.d"
+    command: "mkdir -p /etc/nginx/conf.d && systemctl reload nginx || true"
+    ignoreErrors: true
+  02_verify_nginx:
+    command: "nginx -t && echo 'Nginx config valid'"
     ignoreErrors: true
