--- a/backend/.ebextensions/django.config
+++ b/backend/.ebextensions/django.config
@@ -5,10 +5,15 @@ option_settings:
   aws:elasticbeanstalk:application:environment:
     DJANGO_SETTINGS_MODULE: config.settings
     PYTHONPATH: "/var/app/current:$PYTHONPATH"
+    FILE_UPLOAD_MAX_MEMORY_SIZE: "268435456"  # 256MB
+    DATA_UPLOAD_MAX_MEMORY_SIZE: "268435456"  # 256MB
   aws:elasticbeanstalk:environment:proxy:staticfiles:
     /static: staticfiles
 
 commands:
+  01_migrate:
+    command: "cd /var/app/current && source /var/app/venv/*/bin/activate && python manage.py migrate --noinput"
+    ignoreErrors: true
   02_collectstatic:
     command: "cd /var/app/current && source /var/app/venv/*/bin/activate && python manage.py collectstatic --noinput"
     ignoreErrors: true
