--- a/backend/.ebextensions/nginx_upload.config
+++ b/backend/.ebextensions/nginx_upload.config
@@ -1,5 +1,5 @@
 files:
-  "/etc/nginx/conf.d/client_max_body_size.conf":
+  "/etc/nginx/conf.d/01_client_max_body_size.conf":
     mode: "000644"
     owner: root
     group: root
@@ -14,9 +14,14 @@ files:
       proxy_read_timeout 300s;
 
 commands:
+  00_backup_nginx:
+    command: "cp /etc/nginx/nginx.conf /etc/nginx/nginx.conf.bak || true"
+    ignoreErrors: true
   01_create_nginx_config:
-    command: "mkdir -p /etc/nginx/conf.d && systemctl reload nginx || true"
-    ignoreErrors: true
-  02_verify_nginx:
-    command: "nginx -t && echo 'Nginx config valid'"
-    ignoreErrors: true
+    command: "mkdir -p /etc/nginx/conf.d"
+  02_verify_config:
+    command: "nginx -t"
+  03_reload_nginx:
+    command: "systemctl reload nginx"
+  04_verify_running:
+    command: "systemctl is-active nginx"
