--- a/backend/.ebextensions/nginx_upload.config
+++ b/backend/.ebextensions/nginx_upload.config
@@ -12,16 +12,26 @@ files:
       proxy_connect_timeout 300s;
       proxy_send_timeout 300s;
       proxy_read_timeout 300s;
+  
+  "/opt/elasticbeanstalk/tasks/bundlelogs.d/01_nginx_upload_fix.conf":
+    mode: "000644"
+    owner: root
+    group: root
+    content: |
+      /etc/nginx/conf.d/01_client_max_body_size.conf
 
 commands:
-  00_backup_nginx:
+  00_wait_nginx:
+    command: "sleep 5 && pgrep nginx || true"
+  01_backup_nginx:
     command: "cp /etc/nginx/nginx.conf /etc/nginx/nginx.conf.bak || true"
     ignoreErrors: true
-  01_create_nginx_config:
-    command: "mkdir -p /etc/nginx/conf.d"
-  02_verify_config:
-    command: "nginx -t"
-  03_reload_nginx:
-    command: "systemctl reload nginx"
-  04_verify_running:
-    command: "systemctl is-active nginx"
+  02_create_nginx_config:
+    command: "mkdir -p /etc/nginx/conf.d && ls -la /etc/nginx/conf.d/"
+  03_verify_syntax:
+    command: "nginx -t -c /etc/nginx/nginx.conf 2>&1 | tee /tmp/nginx_test.log"
+  04_force_reload:
+    command: "kill -HUP $(cat /var/run/nginx.pid) || /usr/sbin/nginx -s reload || systemctl restart nginx"
+    ignoreErrors: false
+  05_verify_running:
+    command: "sleep 2 && pgrep -f 'nginx: master' && echo 'Nginx is running'"
