--- a/backend/.ebextensions/nginx_upload.config
+++ b/backend/.ebextensions/nginx_upload.config
@@ -1,37 +1,20 @@
 files:
-  "/etc/nginx/conf.d/01_client_max_body_size.conf":
+  "/var/proxy/conf.d/01_client_max_body_size.conf":
     mode: "000644"
     owner: root
     group: root
     content: |
-      # Allow uploads up to 250MB
+      # Allow uploads up to 250MB - EB manages this location
       client_max_body_size 250M;
-      
-      # Also set timeout for large uploads
       client_body_timeout 300s;
       proxy_connect_timeout 300s;
       proxy_send_timeout 300s;
       proxy_read_timeout 300s;
-  
-  "/opt/elasticbeanstalk/tasks/bundlelogs.d/01_nginx_upload_fix.conf":
-    mode: "000644"
-    owner: root
-    group: root
-    content: |
-      /etc/nginx/conf.d/01_client_max_body_size.conf
 
 commands:
-  00_wait_nginx:
-    command: "sleep 5 && pgrep nginx || true"
-  01_backup_nginx:
-    command: "cp /etc/nginx/nginx.conf /etc/nginx/nginx.conf.bak || true"
+  01_copy_nginx_conf:
+    command: "mkdir -p /var/proxy/conf.d && cp /var/proxy/conf.d/01_client_max_body_size.conf /etc/nginx/conf.d/ || true"
     ignoreErrors: true
-  02_create_nginx_config:
-    command: "mkdir -p /etc/nginx/conf.d && ls -la /etc/nginx/conf.d/"
-  03_verify_syntax:
-    command: "nginx -t -c /etc/nginx/nginx.conf 2>&1 | tee /tmp/nginx_test.log"
-  04_force_reload:
-    command: "kill -HUP $(cat /var/run/nginx.pid) || /usr/sbin/nginx -s reload || systemctl restart nginx"
-    ignoreErrors: false
-  05_verify_running:
-    command: "sleep 2 && pgrep -f 'nginx: master' && echo 'Nginx is running'"
+  02_reload_nginx:
+    command: "systemctl reload nginx || echo 'nginx reload deferred to EB'"
+    ignoreErrors: true
