--- a/backend/.ebextensions/nginx_upload.config
+++ b/backend/.ebextensions/nginx_upload.config
@@ -1,20 +1,8 @@
-files:
-  "/var/proxy/conf.d/01_client_max_body_size.conf":
-    mode: "000644"
-    owner: root
-    group: root
-    content: |
-      # Allow uploads up to 250MB - EB manages this location
-      client_max_body_size 250M;
-      client_body_timeout 300s;
-      proxy_connect_timeout 300s;
-      proxy_send_timeout 300s;
-      proxy_read_timeout 300s;
-
-commands:
-  01_copy_nginx_conf:
-    command: "mkdir -p /var/proxy/conf.d && cp /var/proxy/conf.d/01_client_max_body_size.conf /etc/nginx/conf.d/ || true"
-    ignoreErrors: true
-  02_reload_nginx:
-    command: "systemctl reload nginx || echo 'nginx reload deferred to EB'"
-    ignoreErrors: true
+# DEPRECATED: This file is no longer used
+# 
+# nginx upload configuration is now handled by:
+#   .platform/nginx/conf.d/upload_limits.conf
+#
+# Reason: .platform/ has higher priority in EB and prevents duplicates
+# 
+# DO NOT EDIT - kept only for reference
