fix: Set DEBUG=False for production and add JSON renderer for consistent API responses

--- a/backend/.ebextensions/django.config
+++ b/backend/.ebextensions/django.config
@@ -5,6 +5,7 @@ option_settings:
   aws:elasticbeanstalk:application:environment:
     DJANGO_SETTINGS_MODULE: config.settings
     PYTHONPATH: "/var/app/current:$PYTHONPATH"
+    DEBUG: "False"
     FILE_UPLOAD_MAX_MEMORY_SIZE: "268435456"  # 256MB
     DATA_UPLOAD_MAX_MEMORY_SIZE: "268435456"  # 256MB
   aws:elasticbeanstalk:environment:proxy:staticfiles:
