--- a/backend/.env.example
+++ b/backend/.env.example
@@ -20,5 +20,10 @@ JWT_REFRESH_TOKEN_LIFETIME=168  # hours (7 days)
 # CORS Settings
 CORS_ALLOWED_ORIGINS=http://localhost:5173,http://127.0.0.1:5173
 
-# Email Settings (optional for MVP)
-EMAIL_BACKEND=django.core.mail.backends.console.EmailBackend
+# Email Settings - Resend (for production email delivery)
+EMAIL_BACKEND=resend.django.EmailBackend
+RESEND_API_KEY=re_your_api_key_from_resend
+DEFAULT_FROM_EMAIL=onboarding@resend.dev
+
+# For custom domain emails after Resend setup:
+# DEFAULT_FROM_EMAIL=noreply@yourdomain.com
