--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,6 +48,8 @@ jobs:
         env:
           SECRET_KEY: test-secret-key-for-ci
           DEBUG: True
+          RESEND_API_KEY: ${{ secrets.RESEND_API_KEY }}
+          EMAIL_BACKEND: resend.django.EmailBackend
         run: |
           pytest tests/ -v --cov=. --cov-report=xml --cov-report=term
       
